SONAR-23719 Make sure all components are using the new Email Configuration